--- a/Api/package.json
+++ b/Api/package.json
@@ -1,18 +1,16 @@
 {
   "name": "api",
   "version": "1.0.0",
-  "description": "Estate Api ",
-  "main": "App.js",
+  "description": "Estate Api",
+  "main": "Server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "keywords": [
-    "Api"
-  ],
-  "author": "Rahul",
+  "author": "rahul",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "argon2": "^0.40.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
